# remove_node_modules

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  remove_node_modules.cpp  remove_node_modules.hpp
tests/: test_main.cpp
